--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "node-pushnotifier": "^1.0.0",
     "website-monitor-tool": "^1.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
