--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.8.4",
     "dotenv": "^16.3.1",
     "node-pushnotifier": "^1.0.0",
-    "website-monitor-tool": "^1.0.0"
+    "website-monitor-tool": "github:NihalNavath/website-monitor-tool"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
